# test2

./: .gitignore  pyproject.toml
src/test2/: __init__.py  client.py
tests/: test_client.py
